[gd_scene load_steps=5 format=3 uid="uid://btts0q2p47y4f"]

[ext_resource type="Script" path="res://src/script/actors.gd" id="1_e21m1"]
[ext_resource type="PackedScene" uid="uid://bqxxeu7cj5bwl" path="res://src/scenes/Objects/bullet.tscn" id="2_fyth5"]
[ext_resource type="AudioStream" uid="uid://cej2e6p15kgcr" path="res://assets/Music/alienshoot1.ogg" id="3_mc78q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dx6j1"]
radius = 61.0

[node name="Actor" type="Area2D"]
collision_mask = 2
script = ExtResource("1_e21m1")
Bullet = ExtResource("2_fyth5")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Sprite"]
position = Vector2(0, -72)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dx6j1")

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mc78q")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timeout"]
